; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_drm_gfx.c_drm_gfx_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_drm_gfx.c_drm_gfx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_video = type { i32, i32, i32, i64, i64 }

@g_drm_mode = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @drm_gfx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_gfx_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.drm_video*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.drm_video*
  store %struct.drm_video* %5, %struct.drm_video** %3, align 8
  %6 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %7 = icmp ne %struct.drm_video* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %38

9:                                                ; preds = %1
  %10 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %11 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %12 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %11, i32 0, i32 4
  %13 = call i32 @drm_surface_free(%struct.drm_video* %10, i64* %12)
  %14 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %15 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %14, i32 0, i32 3
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %9
  %19 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %20 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %21 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %20, i32 0, i32 3
  %22 = call i32 @drm_surface_free(%struct.drm_video* %19, i64* %21)
  br label %23

23:                                               ; preds = %18, %9
  %24 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %25 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @slock_free(i32 %26)
  %28 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %29 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @slock_free(i32 %30)
  %32 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %33 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @scond_free(i32 %34)
  store i32* null, i32** @g_drm_mode, align 8
  %36 = load %struct.drm_video*, %struct.drm_video** %3, align 8
  %37 = call i32 @free(%struct.drm_video* %36)
  br label %38

38:                                               ; preds = %23, %8
  ret void
}

declare dso_local i32 @drm_surface_free(%struct.drm_video*, i64*) #1

declare dso_local i32 @slock_free(i32) #1

declare dso_local i32 @scond_free(i32) #1

declare dso_local i32 @free(%struct.drm_video*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
